--- a/src/ImportData/ImportData.csproj
+++ b/src/ImportData/ImportData.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConfigSettings" Version="1.0.11" />
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
