--- a/src/ImportData/Properties/launchSettings.json
+++ b/src/ImportData/Properties/launchSettings.json
@@ -1,7 +1,10 @@
 {
   "profiles": {
     "ImportData": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "remoteDebugEnabled": false,
+      "remoteDebugMachine": "10.172.2.59:4024",
+      "authenticationMode": "None"
     }
   }
 }
